# aws-bedrock-sanity-service

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
k8s/: configmap.example.yaml  deployment.yaml  service.yaml
src/main/: app.py
src/main/config/: bedrock_configs.py
src/main/controllers/: bedrock_controller.py  health_controller.py
src/main/models/: bedrock_models.py
src/main/services/: bedrock_service.py
src/main/utils/: bedrock_utils.py
