[project]
name = "aws-bedrock-sanity-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Yasinda Samaranayake",email = "yasinda@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.42.49,<2.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "types-boto3-bedrock-runtime (>=1.42.42,<2.0.0)"
]
